Some corrections to allow for additional AMG setups.

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -79,6 +79,11 @@ scai_project (
         TFQMR
         TrivialPreconditioner
 
+    HEADERS
+
+        OmegaSolver
+        MatrixWithT
+
     )
 
 ## add subdirectories
