Splitted typed and untyped solver class in separate files.

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -75,6 +75,7 @@ scai_project (
         SimpleAMG
         SingleGridSetup
         SolutionProxy
+        _Solver
         Solver
         TFQMR
         TrivialPreconditioner
