Make naming comply with camelCase

--- a/scai/testsupport/CMakeLists.txt
+++ b/scai/testsupport/CMakeLists.txt
@@ -5,5 +5,5 @@ file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/test_summary.xslt  DESTINATION ${CMAKE_BI
 file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/__init__.py  DESTINATION ${CMAKE_BINARY_DIR}/testsupport )
 file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/testsupport.py  DESTINATION ${CMAKE_BINARY_DIR}/testsupport )
 
-add_library(testsupport STATIC src/global_temp_dir.cpp src/unique_path.cpp)
+add_library(testsupport STATIC src/GlobalTempDir.cpp src/uniquePath.cpp)
 target_include_directories(testsupport PRIVATE include)
