--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -57,6 +57,7 @@ scai_project (
         PartitionIOTest
         SparseVectorTest
         VectorTest
+        VectorKindTest
         VectorAssemblyTest
         VersionTest
 
