Update vector expressions, removed/replaced Matrix::newVector

--- a/scai/lama/expression/CMakeLists.txt
+++ b/scai/lama/expression/CMakeLists.txt
@@ -42,6 +42,7 @@ scai_project (
         Expression
         MatrixExpressions
         MatrixVectorExpressions
+        UnaryVectorExpression
         VectorExpressions
 
     ADD_PARENT_SCOPE 
