Added CyclicPartitioning as a new partitioning class; adapted examples for it.

--- a/scai/partitioning/CMakeLists.txt
+++ b/scai/partitioning/CMakeLists.txt
@@ -65,6 +65,7 @@ scai_project (
 
         Partitioning
         BlockPartitioning
+        CyclicPartitioning
 
         ${METISPARTITIONING}
     )
