--- a/scai/hmemo/examples/CMakeLists.txt
+++ b/scai/hmemo/examples/CMakeLists.txt
@@ -37,7 +37,7 @@ include ( scai_macro/scai_example_makefile )
 include ( scai_macro/scai_run_script )
 include ( scai_function/scai_example_directory )
 
-foreach ( executable Array BenchArray BenchContext Aliasing Threading Create RemoteAccess )
+foreach ( executable Array BenchArray BenchContext Aliasing Threading Create RemoteAccess VectorArray )
 
     scai_add_example( EXECUTABLE ${executable}.exe
                       FILES      ${executable}.cpp )
