Rename atomicOpenMPTest.cpp to Atomic... for consistency

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -34,7 +34,7 @@
 
 set ( CXX_SOURCES
 
-          atomicOpenMPTest
+          AtomicOpenMPTest
           commonTest
           BinaryOpTest
           ConstantsTest
