Several updates due to comments on merge request.

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -185,7 +185,7 @@ set ( COMMON_CLASSES
         Settings
         Walltime
         LibModule
-        Thread
+        thread
         TypeTraits
 )
 
