More type safety for vector, matrix; cast expressions added; real/imag/complex methods added.

--- a/scai/lama/expression/CMakeLists.txt
+++ b/scai/lama/expression/CMakeLists.txt
@@ -39,11 +39,16 @@ scai_project (
     HEADERS
 
         all
+
         Expression
+
+        VectorExpressions
+        UnaryVectorExpression
+        CastVectorExpression
+
         MatrixExpressions
         MatrixVectorExpressions
-        UnaryVectorExpression
-        VectorExpressions
+        CastMatrixExpression
 
     ADD_PARENT_SCOPE 
 )
