Clarifications and renamings corresponding to the comments for the merge request

--- a/scai/lama/expression/CMakeLists.txt
+++ b/scai/lama/expression/CMakeLists.txt
@@ -45,10 +45,12 @@ scai_project (
         VectorExpressions
         UnaryVectorExpression
         CastVectorExpression
+        ComplexVectorExpression
 
         MatrixExpressions
         MatrixVectorExpressions
         CastMatrixExpression
+        ComplexMatrixExpression
 
     ADD_PARENT_SCOPE 
 )
