Correcected dependencies of ipbcls

--- a/scai/ipbcls/CMakeLists.txt
+++ b/scai/ipbcls/CMakeLists.txt
@@ -46,7 +46,7 @@ scai_module (
 
     MODULE_NAME   ipbcls 
 
-    INTERNAL_DEPS common logging lama solver
+    INTERNAL_DEPS common logging tracing lama solver partitioning
 ) 
 
 ### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
