--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,27 @@ serial gcc 4.9.1 (debug):
   tags:
     - draco
 
+mpi intel 2018.1 (debug):
+  <<: *build_test_install_template
+  stage: build test install
+  before_script:
+    - *before_every_job
+    - module load tools/cmake/3.5.2 tools/python/2.7.14
+    - module unload gcc
+    - module load intel/studio/2018.1.038
+    - module load gcc/4.8.2
+    - module load intelmpi/intel/5.1.0.079
+  variables:
+    LAMA_BUILD_TYPE: Release
+    USE_CUDA: 0
+    OMP_NUM_THREADS: 1
+    # It seems to be necessary to specifically specify the Boost installation
+    BOOST_ROOT: /home/brandes/local/boost_1_65_1_icc18
+    EXTRA_CMAKE_OPTS: -DBoost_NO_BOOST_CMAKE=1 -DBoost_NO_SYSTEM_PATHS=1
+    RUN_TESTS_ARGS: --mpi --np 1 2 3 5
+  tags:
+    - draco
+
 mpi gcc 5.4.0 (release):
   <<: *build_test_install_template
   stage: build test install
